# lab9-task3-qt-media-player

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml
i18n/: lab9_be.ts  lab9_en.ts  lab9_ru.ts
qml/: Main.qml
qml/android/: AndroidGamePage.qml  AndroidPlaylistPage.qml  AndroidSettingsPage.qml  AndroidUI.qml
qml/components/: PlayerControls.qml
qml/ios/: IosGamePage.qml  IosPlaylistPage.qml  IosSettingsPage.qml  IosUI.qml
qml/linux/: LinuxUI.qml
qml/pages/: PlaylistPage.qml
qml/shared/: GameAnimations.qml  GameCore.qml  LanguageMenu.qml  NumberInput.qml  PlatformTheme.qml  StatsCard.qml
qml/web/: WebUI.qml
src/: appcontroller.cpp  appcontroller.h  audiotrack.cpp  audiotrack.h  drophandler.cpp  drophandler.h  filesystemscanner.cpp  filesystemscanner.h  gamemodel.cpp  gamemodel.h  gameviewmodel.cpp  gameviewmodel.h  localizer.cpp  localizer.h  main.cpp  platforminfo.cpp  platforminfo.h  playlistmodel.cpp  playlistmodel.h  playlistrepository.cpp  playlistrepository.h  settingsmanager.cpp  settingsmanager.h
tests/: CMakeLists.txt  test_playlist.cpp  test_playlist_integration.cpp  test_playlist_unit.cpp
tests/integration/: tst_integration.cpp
tests/qml/: tst_player_controls.qml
tests/unit/: tst_unit.cpp
tests/widget/: tst_widget.cpp
tests/widget/qml/: tst_gamecore.qml  tst_localizer.qml
translations/: app_be.ts  app_en.ts  app_ru.ts
